Add exit prompt and filter to Last Update

--- a/src/index.html
+++ b/src/index.html
@@ -2,5 +2,6 @@
 <!--<head>
   <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
   <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
+  <meta name="theme-color" content="#00a794" />
 </head>-->
 <my-app>loading</my-app>
