--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 
-<!--<head>
-  <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
+<head>
+ <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
   <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
   <meta name="theme-color" content="#00a794" />
- 
-</head>-->
+  <link rel="manifest" href="/app/manifest.json">
+</head>
 <my-app>loading</my-app>
