--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,6 @@
  <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsenui.css">
   <link rel="stylesheet" href="https://unpkg.com/onsenui/css/onsen-css-components.min.css">
   <meta name="theme-color" content="#00a794" />
- // <link rel="manifest" href="/app/manifest2.json">
+  <link rel="manifest" href="/app/manifest2.json">
 </head>
 <my-app>loading</my-app>
